Major bit of functionality built and add style
Pretty much fully implemented the process of searching for a player
name and returning all the data from the API in a dynamic .ejs page.
Could be presented more nicely. Added a stylesheet for the results
page as well.

--- a/public/static/index.html
+++ b/public/static/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>Welcome to my NHL API hockey app</h1>
     <h3>Here, you can use the UI I have built to perform some searches in the NHLs API and return info regarding teams, players and a variety of other statistics</h3>
+    <a href="nhl_query.html">Player Search Form</a>
 </body>
 </html>
