--- a/public/static/nhl_query.html
+++ b/public/static/nhl_query.html
@@ -18,7 +18,7 @@
     </div>
     
     <div class="form-section">
-        <form action="/misc/hockey" method="POST">
+        <form action="/data/player_search" method="POST">
             <!-- For these inputs to work, form action="" must contain the extension to the file that will process the information-->
             <!-- input name="" must contain and match(?) the name of the value sent to the javascript file via the value="" parameter-->
             <label class="input-label" for="nameKey">Input Name Keyword:</label>
