Various misc additions
Added frame.html and a style page for it. It's not very consequential,
it's just a little page to practice some html/styling stuff on,
I wanted to learn how to use iframes with it.

I edited some text and comments throughout index.html, data.js,
hockey_data.ejs. I removed some unnecessary code from server.js that I
forgot to delete in the copy-over from the original project.

I made some small additions to the readme

Most notably, I roster_search.html, which is a form very similar to
nhl_query.html, but it takes a number input to return the current
roster of players corresponding to a team ID in the NHLs API system.

--- a/public/static/nhl_query.html
+++ b/public/static/nhl_query.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NHL API Player Search</title>
     <link rel="stylesheet" href="/styles/nhl_query_style.css">
 </head>
 <body>
@@ -27,20 +27,5 @@
         </form>
     </div>
 
-    <div class="header-div">
-        <img class="player-image" src="/media/hockey-sketch.jpg" alt="A detailed, but rough sketch of a front-facing hockey player">
-        <h1 class="header-text">
-            NHL Roster Search
-        </h1>
-        <h3>Input an NHL team's ID number to return its current roster of players (Not implemented)</h3>
-    </div>
-    
-    <div class="form-section">
-        <form action="/misc/hockey" method="POST">
-            <label class="input-label" for="nameKey">Input team ID number:</label>
-            <input class="input-box" type="text" placeholder="name" id="nameKey" name="nameKey"><br><br>
-            <input class="input-button" type="submit" value="Submit Query">
-        </form>
-    </div>
 </body>
 </html>
