Renamed hockey_query.html and abstracted ejs file
What was hockey_query.html is now player_name_search.html. Gotta have
more descriptive names now that there's going to be multiple pages
with different functions. Changed other files that referred to it to
comply with this change.

Abstracted hockey_data.ejs' header. It now has no default text, it
all must be provided by whatever POST function in Javascript is
conjuring it up. Only implemented for player_name_search.html at
present.

--- a/public/static/roster_search.html
+++ b/public/static/roster_search.html
@@ -13,7 +13,7 @@
         <h1 class="header-text">
             NHL API Active Roster Search
         </h1>
-        <h3>Input an NHL team's ID number to return its current roster of players (Not implemented)</h3>
+        <h3>Input an NHL team's ID number to return its current roster of players</h3>
     </div>
     
     <div class="form-section">
