--- a/public/static/index.html
+++ b/public/static/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Welcome to my NHL API hockey app</h1>
     <h3>Here, you can use the UI I have built to perform some searches in the NHLs API and return info regarding teams, players and a variety of other statistics</h3>
-    <a href="/static/nhl_query.html">Player Search Form</a>
+    <a href="/static/player_name_search.html">Player Search Form</a>
     <a href="/static/roster_search.html">Roster Search Form</a>
 </body>
 </html>
