--- a/public/static/index.html
+++ b/public/static/index.html
@@ -12,5 +12,23 @@
     <h3>Here, you can use the UI I have built to perform some searches in the NHLs API and return info regarding teams, players and a variety of other statistics</h3>
     <a href="/static/player_name_search.html">Player Search Form</a>
     <a href="/static/roster_search.html">Roster Search Form</a>
+
+    <div class="bottom-bar">
+
+        <p class="bottom-bar-link" id="about-link">
+            about
+        </p>
+        
+        <button class="bottom-bar-link" id="github-button">
+            <a href="https://github.com/Benndot/NHL-API-WebApp" target="_blank">
+                <img class="github-logo" src="/media/GitHub-Logo.png" alt="Github logo with label">
+            </a>
+        </button>
+        
+        <p class="bottom-bar-link">
+           <a href="/static/frame.html" id="frame-link">frame</a> 
+        </p>
+
+    </div>
 </body>
 </html>
