Primarily progress in the /teams POST interaction
I built the desired interaction for /teams POST, receiving, formatting
and sending the file with the appropriate data to the user. Added
a way to display all the data categories to the User below it. In doing
so, I've added an "additional info" section to the body of the .ejs file

I created a static html page to contain the interactions to return
lists of teams/franchises. It's not properly styled, a WIP at present.

And I expanded on and updated the readme file

--- a/public/static/roster_search.html
+++ b/public/static/roster_search.html
@@ -23,5 +23,19 @@
             <input class="input-button" type="submit" value="Submit Value">
         </form>
     </div>
+
+    <div class="form-section">
+        <form action="/data/teams" method="POST">
+            <label class="input-label" for="inputNum">Get list of teams and IDs:</label>
+            <input class="input-button" type="submit" value="Submit Value">
+        </form>
+    </div>
+
+    <div class="form-section">
+        <form action="/data/franchises" method="POST">
+            <label class="input-label" for="inputNum">Get list of franchises and IDs:</label>
+            <input class="input-button" type="submit" value="Submit Value">
+        </form>
+    </div>
 </body>
 </html>
